updagte log file named

--- a/config.yaml
+++ b/config.yaml
@@ -8,8 +8,9 @@ database:
 
 log:
   level: "info"
-  filename: "./logs/app.log"
-  maxSize: 100
-  maxBackups: 3
+  filename: "./logs/20060102.log"
+  maxSize: 1  # 日志文件大小，现在设置为1
+  maxSizeUnit: "M"  # 单位改为M，表示1MB
+  maxBackups: 10
   maxAge: 28
   compress: false
